--- a/index copy.html
+++ b/index copy.html
@@ -211,13 +211,13 @@
                     <div class="product-item">
                         <div class="product-top">
                             <a href="" class="product-thumb">
-                                <img src="https://product.hstatic.net/200000346443/product/z3565183299803_077d6121030c997fde8fd3ed44b5af3b_1303e6caa85144b3a4066c42eb927af4_grande.jpg" alt="">
+                                <img src="https://product.hstatic.net/200000346443/product/full_logo_den_mat_truoc_d5fa0bf281414ec8910a3b3ff822fd0d_master.jpg" alt="">
                             </a>
                             <a href="" class="buy-now">Mua ngay</a>
                         </div>
                         <div class="product-infor">
                             <a href="" class="product-cat"></a>
-                            <h4>TEE ANGEL</h4>
+                            <h4>TEE FULL LOGO</h4>
                             <div class="product-pire">200.000đ</div>
                         </div>
                     </div>
@@ -262,7 +262,7 @@
                         </div>
                         <div class="product-infor">
                             <a href="" class="product-cat"></a>
-                            <h4>Áo Polo Local Brand Sunflower Signature Polo Shirt Premium</h4>
+                            <h4>TEE CANDY POP</h4>
                             <div class="product-pire">179.000đ</div>
                         </div>
                     </div>
@@ -277,7 +277,7 @@
                         </div>
                         <div class="product-infor">
                             <a href="" class="product-cat"></a>
-                            <h4>Áo Polo Local Brand Sunflower Special Collection Premium </h4>
+                            <h4>HOODIE ZIP CANDY POP</h4>
                             <div class="product-pire">169.000đ</div>
                         </div>
                     </div>
@@ -322,7 +322,7 @@
                         </div>
                         <div class="product-infor">
                             <a href="" class="product-cat"></a>
-                            <h5>Áo Polo Phối Jeans Playful Streetwear Local Brand Sunflower form Oversize</h5>
+                            <h5>8YO RETRO ART POLO</h5>
                             <div class="product-pire">190.000đ</div>
                         </div>
                     </div>
