--- a/polo copy.html
+++ b/polo copy.html
@@ -195,7 +195,7 @@
                     <div class="product-item">
                         <div class="product-top">
                             <a href="" class="product-thumb">
-                                <img src="https://product.hstatic.net/200000346443/product/z3565183300524_5a27d053840746e1c6a3d74ced1cf34a_7589124e98bc4776a89e37569892a610_master.jpg" alt="">
+                                <img src="https://down-vn.img.susercontent.com/file/sg-11134201-7rcfb-ls13x84alnb407" alt="">
                             </a>
                             <a href="" class="buy-now">Mua ngay</a>
                         </div>
