--- a/index copy.html
+++ b/index copy.html
@@ -24,7 +24,7 @@
                 <div class="item">
                     <a href="sanpham copy.html">Sản Phẩm</a>
                     <div class="child">
-                        <a href="polo copy.html">Áo Polo</a> <a href="inout copy.html">Áo Thun</a> <a href="inout.html">Áo Hoodie</a> <a href="inout.html">BTS</a>
+                        <a href="polo copy.html">Áo Polo</a> <a href="inout copy.html">Áo Thun</a> <a href="inout.html">Áo Hoodie</a> <a href="inout.html">BST</a>
                     </div>
                     
                 </div>
@@ -44,7 +44,7 @@
                     <a href="inout copy.html"><img src="img/icon-user.webp" alt=""></a>
                 </div>
                 <div class="item">
-                    <a href="#"><img src="img/icon-bag.webp" alt=""></a>
+                    <a href="giohang.html"><img src="img/icon-bag.webp" alt=""></a>
                 </div>
                 <div class="item">
                     <a href="Typescript/admin_dm.html"><img src="img/icon-search.webp" alt=""></a>
@@ -60,7 +60,7 @@
                 </h2>
                 <p>Chuyên cung cấp những mẫu mã đẹp phục vụ người dùng 1 cách
                     hoàn hảo nhất</p>
-                <button>Mua ngay</button>
+                <a href="sanpham copy.html"><button>Mua ngay</button></a>
             </div>
             <!-- <div class="box-right">
                 <img src="assets/img_1.png" alt="">
@@ -170,7 +170,7 @@
                 <li>
                     <div class="product-item">
                         <div class="product-top">
-                            <a href="" class="product-thumb">
+                            <a href="chitietaothun.html" class="product-thumb">
                                 <img src="/img/ao_polo_7.webp" alt="">
                             </a>
                             <a href="" class="buy-now">Mua ngay</a>
