--- a/inout copy.html
+++ b/inout copy.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Validate form</title>
+    <title>Tài khoản</title>
     <link rel="stylesheet" href="css/inout copy.css" />
     <link
       rel="stylesheet"
