--- a/polo copy.html
+++ b/polo copy.html
@@ -22,7 +22,7 @@
                     <a href="index copy.html">Trang chủ</a>
                 </div>
                 <div class="item">
-                    <a href="">Sản phẩm</a>
+                    <a href="sanpham copy.html">Sản phẩm</a>
                     <div class="child">
                         <a href="polo copy.html">Áo Polo</a> <a href="#">Áo Thun</a> <a href="#">Áo Hoodie</a> <a href="#">BTS</a>
                     </div>
@@ -39,7 +39,7 @@
             </div>
             <div id="actions">
                 <div class="item">
-                    <a href="login_out/navbar.html"><img src="img/icon-user.webp" alt=""></a>
+                    <a href="inout copy.html"><img src="img/icon-user.webp" alt=""></a>
                 </div>
                 <div class="item">
                     <img src="img/icon-bag.webp" alt="">
