--- a/sanpham copy.html
+++ b/sanpham copy.html
@@ -23,25 +23,25 @@
                 </div>
 
                 <div class="item">
-                    <a href="sanpham.html">Sản Phẩm</a>
+                    <a href="sanpham copy.html">Sản Phẩm</a>
                     <div class="child">
-                        <a href="polo.html">Áo Polo</a> <a href="inout.html">Áo Thun</a> <a href="inout.html">Áo Hoodie</a> <a href="inout.html">BTS</a>
+                        <a href="polo copy.html">Áo Polo</a> <a href="inout.html">Áo Thun</a> <a href="inout.html">Áo Hoodie</a> <a href="inout.html">BTS</a>
                     </div>
                 </div>    
 
                 <div class="item">
-                    <a href="">Blog</a>
+                    <a href="#">Blog</a>
                 </div>
                 <div class="item">
-                    <a href="">Liên hệ</a>
+                    <a href="#">Liên hệ</a>
                 </div>
                 <div class="item">
-                    <a href="admin.html">Admin</a>
+                    <a href="#">Admin</a>
                 </div>
             </div>
             <div id="actions">
                 <div class="item">
-                    <a href="login_out/navbar.html"><img src="img/icon-user.webp" alt=""></a>
+                    <a href="admin.html"><img src="img/icon-user.webp" alt=""></a>
                 </div>
                 <div class="item">
                     <img src="img/icon-bag.webp" alt="">
@@ -298,6 +298,7 @@
                     </div>
                 </li>   
             </ul>
+           
             <div class="list-page">
                 <div class="item">
                     <a href="">1</a>
